clusters/homelab/apps/llm/whisper-asr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper-open-ai
  namespace: llm
  labels:
    app: whisper-open-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper-open-ai
  template:
    metadata:
      labels:
        app: whisper-open-ai
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
    spec:
      containers:
        - name: speech-service
          image: dlaszlo/speech-service:cpu-latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: huggingface-cache
              mountPath: /data/huggingface
          resources:
            requests:
              cpu: "150m"
              memory: "4Gi"
            limits:
              cpu: "3"
              memory: "4Gi"
      volumes:
        - name: huggingface-cache
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: whisper-open-ai
spec:
  selector:
    app: whisper-open-ai
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
