clusters/homelab/apps/llm/comfyui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: llm
  labels:
    app: comfyui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        app: comfyui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "gpu.intel.com/device-id.0300-56a0.present"
                operator: "In"
                values:
                - "true"
      containers:
      - name: comfyui
        image: docker.io/yanwk/comfyui-boot:xpu
        ports:
        - containerPort: 8188
          protocol: TCP
        resources:
          requests:
            cpu: "50m"
            memory: "13Gi"
            gpu.intel.com/i915: 1
          limits:
            cpu: "2500m"
            memory: "13Gi"
            gpu.intel.com/i915: 1
        volumeMounts:
        - name: storage
          mountPath: /root
        - name: models
          mountPath: /root/ComfyUI/models
        - name: hf-cache
          mountPath: /root/.cache/huggingface/hub
        - name: torch-cache
          mountPath: /root/.cache/torch/hub
        - name: user-input
          mountPath: /root/ComfyUI/input
          subPath: input
        - name: user-output
          mountPath: /root/ComfyUI/output
          subPath: output
        - name: user-workflows
          mountPath: /root/ComfyUI/user/default/workflows
          subPath: workflows
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: comfyui-storage
      - name: models
        persistentVolumeClaim:
          claimName: comfyui-models
      - name: hf-cache
        persistentVolumeClaim:
          claimName: model-cache
      - name: torch-cache
        persistentVolumeClaim:
          claimName: model-cache
      - name: user-input
        persistentVolumeClaim:
          claimName: comfyui-user
      - name: user-output
        persistentVolumeClaim:
          claimName: comfyui-user
      - name: user-workflows
        persistentVolumeClaim:
          claimName: comfyui-user
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: llm
spec:
  selector:
    app: comfyui
  ports:
    - protocol: TCP
      port: 8188
      targetPort: 8188
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui
  namespace: llm
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "comfyui.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: comfyui
          port: 8188
