clusters/homelab/apps/llm/openwebui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: llm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:v0.11.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/backend/data
              name: open-webui-data
          resources:
            limits:
              cpu: "1"
              memory: "3Gi"
      volumes:
        - name: open-webui-data
          persistentVolumeClaim:
            claimName: open-webui-data
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: llm
spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
  namespace: llm
  # labels:
  #   external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "llm.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: open-webui
          port: 3000
